2005-10-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-10-23  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.1 ===

	* NEWS:
	* configure.ac:
	* doc/reference/tmpl/EphySingle.sgml:
	* doc/reference/tmpl/ephy-embed-single.sgml:
	* doc/reference/tmpl/ephy-embed.sgml:
	* doc/reference/tmpl/epiphany-unused.sgml:
	* src/Makefile.am:

2005-10-22  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp: (impl_list_passwords):
	* src/pdm-dialog.c:
	* data/glade/epiphany.glade:

	Add a way to view stored password. Fix bug 316821.

2005-10-22  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime type.

	* src/ephy-notebook.c:

	Remove the accidental commit from the H18 patch.

2005-10-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-extensions-manager.c:
	(ephy_extensions_manager_parse_keyfile),
	(ephy_extensions_manager_load_ini_file),
	(ephy_extensions_manager_load_xml_file), (path_to_identifier),
	(ephy_extensions_manager_load_file), (reload_sync_cb), (reload_cb),
	(schedule_load_from_monitor), (dir_changed_cb), (cancel_timeout),
	(ephy_extensions_manager_init), (ephy_extensions_manager_dispose),
	(ephy_extensions_manager_class_init):

	Load the key files and xml files directly from disc, instead of
	getting their contents and parsing from memory.
	When a file changes, schedule a reload instead of processing it
	immediately, to cope with multiple changes (CREATED + CHANGED) in
	a row.

2005-10-21  Philip Langdale  <philipl@mail.utexas.edu>

	* data/ui/epiphany-ui.xml:
	Point main menu UI at toolbar actions.
	* src/ephy-lockdown.c:
	(update_window): Don't try and change the state of
	the now non-existent menu specific actions.
	* src/ephy-toolbar.c
	(ephy_toolbar_set_window): Sync up toolbar actions
	so that they will appear in menus to be identical to
	the old menu specific actions. This just means adding