@@ -1,3 +1,11 @@
+2005-10-24  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-new-bookmark.c: (ephy_new_bookmark_add),
+	(build_editing_table), (ephy_new_bookmark_construct),
+	(ephy_new_bookmark_set_property), (ephy_new_bookmark_get_property):
+
+	Remove info text referring to the not-committed markers in H18.
+
 2005-10-23  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
